--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -25,11 +25,11 @@
   &__icon {
     color: #0dcaf0;
     cursor: pointer;
-    font-size: 1.5em;
+    font-size: 1.35em;
 
     &Wrapper {
+      height: 1.5em;
       padding-left: 0.5em;
-      padding-top: 0.20em;
     }
   }
 
