--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -1,4 +1,5 @@
 @import "src/styles/animations";
+@import 'src/app/variables';
 
 .firstSearchbar {
   display: inline-flex;
@@ -11,7 +12,7 @@
 
 .header {
   backdrop-filter: blur(3px);
-  background: rgba(59, 95, 125, .75);
+  background: $container-background-color-as-rgba;
   border-bottom: 1px solid lightblue;
   padding: 0.5em;
   position: fixed;
