- moved product navigation from "items overview" to hamburger menu in header - active module is now highlighted.

--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="container">
     <div class="row">
-      <a [routerLink]="['/imprint']">Impressum</a>
+      <a [routerLink]="['/imprint']" class="footer__link{{isImprintActive ? '--active' : ''}}">Impressum</a>
     </div>
   </div>
 </div>
