--- a/src/app/component/wishlist/add-to-wishlist.component.html
+++ b/src/app/component/wishlist/add-to-wishlist.component.html
@@ -1,4 +1,5 @@
 <a
+  *ngIf="item?.itemId"
   class="item__wishlist {{ isItemOnWishlist ? 'item__wishlist--active' : ''}}"
   (click)="toggleItem()"
 >
