--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,2 +1,4 @@
 $container-background-color: #355f7d;
 $container-background-color-as-rgba: rgba(53, 95, 125, 0.75);
+$content-color: #0dcaf0;
+$content-color--active: lightblue;
