--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -1,3 +1,12 @@
+@keyframes placeHolderShimmer {
+  0% {
+    background-position: -800px 0
+  }
+  100% {
+    background-position: 800px 0
+  }
+}
+
 .pulse {
   animation: pulse 0.2s 2 ease-in-out alternate;
 }
