--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -62,6 +62,17 @@
     -webkit-line-clamp: 4;
   }
 
+  &--loading {
+    animation-duration: 4s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: linear-gradient(to right, rgba(7, 80, 97, .25) 8%, rgba(7, 90, 97, .25) 50%, rgba(7, 80, 97, .25) 92%);
+    background-size: 800px 104px;
+    position: relative;
+  }
+
   &s {
     &__container {
       display: inline-flex;
@@ -71,7 +82,7 @@
 
     &__content {
       display: flex;
-      padding-top: 2em;
+      padding-top: 4.5em;
     }
   }
 }
