--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="row header__content">
       <div class="col-12 header__title">
         <div class="header__menuIcon">
-          <i class="bi bi-list" (click)="isCategoryMenuOpen = !isCategoryMenuOpen"></i>
+          <i class="fa fa-regular fa-bars" (click)="isCategoryMenuOpen = !isCategoryMenuOpen"></i>
         </div>
         <div *ngIf="isCategoryMenuOpen" class="header__menu">
           <div
@@ -17,19 +17,23 @@
         </div>
 
         <div style="font-size: 1.3em;" [routerLink]="['/']">
-          <span style="color:#0dcaf0; font-weight: bold;">W</span><span style="color: lightblue;">e</span> <span style="color:#0dcaf0; font-weight: bold;">W</span><span style="color: lightblue;">anna</span>&nbsp;<span style="color: goldenrod;">shop!</span>
+          <span style="cursor: pointer;">
+            <span style="color:#0dcaf0; font-weight: bold;">W</span><span style="color: lightblue;">e</span>
+            <span style="color:#0dcaf0; font-weight: bold;">W</span><span style="color: lightblue;">anna</span>
+            <span style="color: goldenrod;"> {{'NAVIGATION_SLOGAN_' + activeNavigationItem?.toId | translate}}!</span>
+          </span>
         </div>
 
         <div class="header__icons">
           <div class="header__iconWrapper">
             <i
-              class="bi bi-heart{{userHasAtLeastOneWishlistItem ? '-fill' : ''}} header__icon {{isModuleActive(Module.WISHLIST) ? 'header__icon--active' : ''}}"
+              class="fa fa-heart{{userHasAtLeastOneWishlistItem ? '-fill' : ''}} header__icon {{isModuleActive(Module.WISHLIST) ? 'header__icon--active' : ''}}"
               [routerLink]="['/wishlist']"
             ></i>
           </div>
           <div class="header__iconWrapper">
             <i
-              [ngClass]="['bi', 'header__icon', 'bi-person' + (isLoggedIn ? '-fill' : ''), hasJustLoggedIn ? 'hithere' : '', isModuleActive(Module.PROFILE) ? 'header__icon--active' : '']"
+              [ngClass]="['fa', 'header__icon', 'fa-user', (isLoggedIn ? 'fa-solid' : 'fa-regular'), hasJustLoggedIn ? 'hithere' : '', isModuleActive(Module.PROFILE) ? 'header__icon--active' : '']"
               [routerLink]="['/profile']"
             ></i>
           </div>
@@ -37,20 +41,22 @@
       </div>
     </div>
   </div>
-  <div class="col-12 secondSearchbar">
-    <input
-      #secondBarSearchPattern
-      autofocus
-      tabIndex="0"
-      type="text"
-      class="searchbar__input"
-      placeholder="{{'iAmSearchingFor'|translate}}"
-      [formControl]="secondBarSearchPatternControl"
-    />
+  <div class="secondSearchbar">
+    <div class="col-12 secondSearchbar__content">
+      <input
+        #secondBarSearchPattern
+        autofocus
+        tabIndex="0"
+        type="text"
+        class="searchbar__input"
+        placeholder="{{'iAmSearchingFor'|translate}}"
+        [formControl]="secondBarSearchPatternControl"
+      />
 
-    <div class="searchbar__inputBox">
-      <div class="searchbar__inputButton">
-        <i class="bi bi-search" (click)="searchNow()"></i>
+      <div class="searchbar__inputBox">
+        <div class="searchbar__inputButton">
+          <i class="fa fa-search" (click)="searchNow()"></i>
+        </div>
       </div>
     </div>
   </div>
