--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -42,8 +42,8 @@
   &__icons {
     display:inline-flex;
     position: absolute;
-    right: 1.5em;
-    top: 0.60em;
+    right: 1.6em;
+    top: 1.2em;
   }
 
   &__logo {
@@ -54,6 +54,7 @@
     background-color: $container-background-color;
     border: 1px solid $content-color--active;
     border-radius: 0.5em;
+    left: 1em;
     position: absolute;
     text-align: center;
     top: 2.5em;
@@ -79,9 +80,9 @@
 
   &__menuIcon {
     font-size:1.5em;
-    left: 1.5em;
-    position:absolute;
-    top: 0.60em;
+    left: 1em;
+    position: absolute;
+    top: 0.4em;
   }
 
   &__title {
@@ -116,22 +117,27 @@
 
   &__inputBox {
     cursor: pointer;
-    font-size:1.2em;
+    font-size: 0.9em;
     position: absolute;
-    right: 1.3em;
+    right: 1.7em;
   }
 
   &__inputButton {
     background-color: lightblue;
     border: 1px solid lightblue;
     border-radius: 50%;
+    font-family: "Font Awesome 5 Free", system-ui;
     color: #2d3e5e;
     padding: 0.20em;
   }
 }
 
 .secondSearchbar {
-  display:inline-flex;
-  padding-left: 0.8em;
-  padding-right: 1em;
+  padding-top: 0.5em;
+
+  &__content {
+    display:inline-flex;
+    padding-left: 0.8em;
+    padding-right: 1em;
+  }
 }
