- further header style improvements

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -16,7 +16,7 @@
           </div>
         </div>
 
-        <div style="font-size: 1.3em;" [routerLink]="['/']">
+        <div class="header__logo" [routerLink]="['/']">
           <span style="cursor: pointer;">
             <span style="color:#0dcaf0; font-weight: bold;">W</span><span style="color: lightblue;">e</span>
             <span style="color:#0dcaf0; font-weight: bold;">W</span><span style="color: lightblue;">anna</span>
