--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -43,11 +43,11 @@
     display:inline-flex;
     position: absolute;
     right: 1.6em;
-    top: 1.2em;
+    top: 1em;
   }
 
   &__logo {
-    width: 2em;
+    font-size: 1.1em;
   }
 
   &__menu {
