--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -117,9 +117,10 @@
 
   &__inputBox {
     cursor: pointer;
-    font-size: 1.1em;
+    font-size: 1.2em;
+    line-height: 1px;
     position: absolute;
-    right: 1.4em;
+    right: 1.3em;
   }
 
   &__inputButton {
