--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -117,10 +117,10 @@
 
   &__inputBox {
     cursor: pointer;
-    font-size: 1.2em;
+    font-size: 20px;
     line-height: 1px;
     position: absolute;
-    right: 1.3em;
+    right: 1.2em;
   }
 
   &__inputButton {
