--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -6,6 +6,7 @@
   font-size: 0.85em;
   padding: 2em;
   margin: 0.5em;
+  text-align: center;
   text-align: -webkit-center;
   width: 20em;
 
@@ -28,7 +29,7 @@
 
   &__imageContainer {
     min-height: 14em;
-    position:relative;
+    position: relative;
     width: 10em;
 
     @media screen and (min-width: 576px) {
