--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -51,6 +51,10 @@
     border-radius: 15px;
     margin: 1em;
     padding: 0.3em;
+
+    &--hidden {
+      background: none;
+    }
   }
 
   &__title {
