- footer is now hidden, when scrolling down

--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div *ngIf="showFooter" class="footer">
   <div class="container">
     <div class="row">
       <a [routerLink]="['/imprint']" class="footer__link{{isImprintActive ? '--active' : ''}}">Impressum</a>
