- added 2 new categories

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -18,8 +18,8 @@
 
         <div class="header__logo" [routerLink]="['/']">
           <span style="cursor: pointer;">
-            <span style="color:#0dcaf0; font-weight: bold;">W</span><span style="color: lightblue;">e</span>
-            <span style="color:#0dcaf0; font-weight: bold;">W</span><span style="color: lightblue;">anna</span>
+            <span class="header__titleCapitalLetter">W</span><span style="color: lightblue;">e</span>
+            <span class="header__titleCapitalLetter">W</span><span style="color: lightblue;">anna</span>
             <span style="color: goldenrod;"> {{'NAVIGATION_SLOGAN_' + (activeNavigationItem?.toId || 'ALL') | translate}}!</span>
           </span>
         </div>
