--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -88,6 +88,12 @@
   &__title {
     text-align: center;
   }
+
+  &__titleCapitalLetter {
+    color:#0dcaf0;
+    font-weight: bold;
+  }
+
 }
 
 .headerbar {
