--- a/src/app/component/product-view/single-product-view.component.html
+++ b/src/app/component/product-view/single-product-view.component.html
@@ -1,3 +1,11 @@
 <div class="container singleProductView__content">
-  Produkt-ID: {{itemId}}
+  <div class="row">
+    <div class="col-6">
+      <img class="mainStage__mainImage" src="{{item?.titleImage}}"/>
+    </div>
+    <div class="col-6 mainStage__productInformation">
+      <h3>{{item?.title}}</h3>
+      {{item?.description}}
+    </div>
+  </div>
 </div>
