--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -1,3 +1,13 @@
+.mainStage {
+  &__productInformation {
+    text-align: left;
+  }
+
+  &__mainImage {
+    max-height: 30em;
+  }
+}
+
 .singleProductView {
   &__content {
     padding-top: 4.5em;
